--- a/src/app/form-register/form-register.component.html
+++ b/src/app/form-register/form-register.component.html
@@ -15,7 +15,7 @@
   </mat-form-field>
  <!-- <button mat-raised-button color="accent" (click)="onAddPost()">-->
   <button mat-raised-button color="accent" type="submit">
-    Save Post
+    Submit
   </button>
 </form>
 
