--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,11 @@
-
-<app-header></app-header>
-<app-form-register></app-form-register>
-<app-sidebar></app-sidebar>
+<mat-sidenav-container>
+  <mat-sidenav #sidenav role="navigation">
+    <app-sidebar (sidenavClose)="sidenav.close()"></app-sidebar>
+  </mat-sidenav>
+  <mat-sidenav-content>
+    <app-header (sidenavToggle)="sidenav.toggle()"></app-header>
+    <main>
+      <router-outlet></router-outlet>
+    </main>
+  </mat-sidenav-content>
+</mat-sidenav-container>
