--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,27 @@
-<mat-toolbar color="primary">Covid Test</mat-toolbar>
+<mat-toolbar >
+  <div >
+    <button mat-icon-button (click)="onToggleSidenav()">
+      <mat-icon>menu</mat-icon>
+    </button>
+  </div>
+  <div >
+    <a routerLink="/home" class="title">
+      <h1> <span class="material-icons"> coronavirus</span> CTS</h1></a>
+  </div>
+  <div fxFlex fxLayout fxLayoutAlign="end" fxHide.xs>
+    <ul fxLayout fxLayoutGap="15px" class="navigation-items">
+      <li>
+        <a routerLink="/user">
+          <span class="material-icons"> perm_identity </span>Sign Up
+        </a>
+      </li>
+      <li>
+        <a routerLink="/login">
+          <span class="material-icons">
+            enhanced_encryption
+            </span>Login
+        </a>
+      </li>
+    </ul>
+  </div>
+</mat-toolbar>
