login & register done

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,26 +1,28 @@
-<div class="login-wrapper" fxLayout="row" fxLayoutAlign="center center">
+<div class=" login-wrapper" fxLayout="row" fxLayoutAlign="center center">
 
   <mat-card class="box">
     <mat-card-header>
       <mat-card-title>Log in</mat-card-title>
     </mat-card-header>
 
-    <form class="loginform">
+    <form class="loginform" (submit)= "onLogin(loginForm)" #loginForm="ngForm">
       <mat-card-content>
-        <mat-form-field class="example-full-width">
-          <input matInput placeholder="Username">
+        <mat-form-field class="input-field">
+          <input matInput name="username" ngModel required minlength="3" #username="ngModel" placeholder="Username">
+          <mat-error *ngIf= "username.invalid"> Please enter a username</mat-error>
         </mat-form-field>
 
-        <mat-form-field class="example-full-width">
-          <input matInput placeholder="Password">
+        <mat-form-field class="input-field">
+          <input matInput name="password" placeholder="Password" ngModel required minlength="6" #password="ngModel">
+          <mat-error *ngIf= "password.invalid"> Please enter a password</mat-error>
         </mat-form-field>
       </mat-card-content>
-      <button mat-stroked-button color="warn" class="btn-block">Log in</button>
+      <button mat-raised-button color="primary" class="btn-block">Log in</button>
     </form>
 
-    <div class="sign">
+    <mat-card-footer class="sign">
     <p>Don't have any account? <a routerLink="/user">Sign Up Now</a></p>
-  </div>
+  </mat-card-footer>
   </mat-card>
 
 
