--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,47 +1,31 @@
-mat-icon{
+mat-icon {
   color: #ffffff;
+  font-size: 24px;
 }
-.material-icons{
-margin-right: 10px;
 
-  font-size: 28px;  /* Preferred icon size */
-
-
-  /* Support for all WebKit browsers. */
-  -webkit-font-smoothing: antialiased;
-  /* Support for Safari and Chrome. */
-  text-rendering: optimizeLegibility;
-
-  /* Support for Firefox. */
-  -moz-osx-font-smoothing: grayscale;
-
-  /* Support for IE. */
-  font-feature-settings: 'liga';
+.title {
+  font-size: 30px;
 }
+.menu-spacer {
+  flex: 1 1 auto;
+}
+
 a {
   text-decoration: none;
   color: white;
-  font-size: 18px;
-  margin: 50px 10px;
-
+  margin: 0px 10px;
 }
 
-a:hover, a:active{
-  color:#FFC05F;
+.btn-nav:hover, .btn-nav:active {
+  background-color: #ffc05f;
 }
 
-.navigation-items{
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
+mat-toolbar {
+  background: #3196e2;
 }
 
-mat-toolbar{
-  background:  #3196E2;
-}
-
-@media(max-width: 959px){
-  mat-toolbar{
-      border-radius: 0px;
+@media (max-width: 959px) {
+  mat-toolbar {
+    border-radius: 0px;
   }
 }
