--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,27 +1,73 @@
-<mat-toolbar >
-  <div >
-    <button mat-icon-button (click)="onToggleSidenav()">
-      <mat-icon>menu</mat-icon>
-    </button>
-  </div>
-  <div >
-    <a routerLink="/home" class="title">
-      <h1> <span class="material-icons"> coronavirus</span> CTS</h1></a>
+<mat-toolbar>
+  <mat-toolbar-row>
+    <div fxHide.gt-xs>
+      <button mat-icon-button (click)="onToggleSidenav()">
+        <mat-icon>menu</mat-icon>
+      </button>
+    </div>
+    <a color="basic" routerLink="/home" class="title">
+      <mat-icon> coronavirus</mat-icon> CTS</a
+    >
+    <span class="menu-spacer"></span>
+    <div fxShow="true" fxHide.lt-md >
+      <!--hidden on both SM and XS screen sizes -->
+      <a mat-raised-button class="btn-nav" color="primary" routerLink="/login">
+        <mat-icon> enhanced_encryption </mat-icon>Login
+      </a>
+      <a mat-raised-button class="btn-nav" color="primary" routerLink="/user">
+        <mat-icon> perm_identity </mat-icon>Sign Up
+      </a>
+    </div>
+  </mat-toolbar-row>
+  <!-- <div>
+    <a mat-icon-button routerLink="/home" class="title">
+      <mat-icon class="material-icons"> coronavirus</mat-icon> CTS</a>
   </div>
   <div fxFlex fxLayout fxLayoutAlign="end" fxHide.xs>
     <ul fxLayout fxLayoutGap="15px" class="navigation-items">
       <li>
-        <a routerLink="/user">
-          <span class="material-icons"> perm_identity </span>Sign Up
+        <a mat-icon-button routerLink="/user">
+          <mat-icon> perm_identity </mat-icon>Sign Up
         </a>
       </li>
       <li>
-        <a routerLink="/login">
-          <span class="material-icons">
-            enhanced_encryption
-            </span>Login
+        <a mat-icon-button routerLink="/login">
+          <mat-icon> enhanced_encryption </mat-icon>Login
         </a>
       </li>
     </ul>
-  </div>
+  </div>-->
 </mat-toolbar>
+<!-- <mat-toolbar color="primary">
+    <mat-toolbar-row>
+      <button mat-icon-button (click)="sidenav.toggle()" fxShow="true" fxHide.gt-sm>
+        <mat-icon>menu</mat-icon>
+      </button>
+      <span>Responsive Navigation</span>
+      <span class="menu-spacer"></span>
+      <div fxShow="true" fxHide.lt-md>
+        <!-- The following menu items will be hidden on both SM and XS screen sizes
+        <a href="#" mat-button>Menu Item 1</a>
+        <a href="#" mat-button>Menu Item 2</a>
+        <a href="#" mat-button>Menu Item 3</a>
+        <a href="#" mat-button>Menu Item 4</a>
+        <a href="#" mat-button>Menu Item 5</a>
+        <a href="#" mat-button>Menu Item 6</a>
+      </div>
+    </mat-toolbar-row>
+  </mat-toolbar>
+
+  <mat-sidenav-container fxFlexFill>
+    <mat-sidenav #sidenav>
+      <mat-nav-list>
+        <a (click)="sidenav.toggle()" href="" mat-list-item>Close</a>
+        <a href="#" mat-list-item>Menu Item 1</a>
+        <a href="#" mat-list-item>Menu Item 2</a>
+        <a href="#" mat-list-item>Menu Item 3</a>
+        <a href="#" mat-list-item>Menu Item 4</a>
+        <a href="#" mat-list-item>Menu Item 5</a>
+        <a href="#"mat-list-item>Menu Item 6</a>
+      </mat-nav-list>
+    </mat-sidenav>
+    <mat-sidenav-content fxFlexFill>Main content</mat-sidenav-content>
+  </mat-sidenav-container>-->
