--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,20 +1,20 @@
-
-.login
-
+main {
+  background-size: cover;
+  margin: 0;
+  width: 50%;
+  background: url("/assets/united-nations-covid-19-response-gpjhe4Ma8AE-unsplash.jpg") no-repeat center;
+  background-attachment: fixed;
+}
 .login-wrapper {
   height: 100%;
 }
 
-
-
 .box {
   position: relative;
-  top: 0;
-  opacity: 1;
   float: left;
   padding: 60px 50px;
   width: 100%;
-  background: #fff;
+  background: #ffc05f;
   border-radius: 10px;
   transform: scale(1);
   -webkit-transform: scale(1);
@@ -24,7 +24,7 @@
   margin-top: 20px;
 }
 
-.box.back {
+/*.box.back {
   transform: scale(.95);
   -webkit-transform: scale(.95);
   -ms-transform: scale(.95);
@@ -47,14 +47,18 @@
   -ms-transform: scale(.95);
   z-index: -1;
 }
+.login-wrapper .mat-form-field-appearance-legacy .mat-form-field-infix {
+  padding: 0.8375em 0;
+}
 
-.login-wrapper .example-form {
+*/
+.login-wrapper .loginform {
   min-width: 100%;
   max-width: 300px;
   width: 100%;
 }
 
-.login-wrapper .example-full-width,
+.login-wrapper .input-field,
 .login-wrapper .btn-block {
   width: 100%;
 }
@@ -64,6 +68,7 @@
   width: 100%;
   display: block;
   font-weight: 700;
+  color: #fff7fa;
 }
 
 .login-wrapper mat-card-header mat-card-title {
@@ -78,15 +83,13 @@
 .login-wrapper .mat-stroked-button {
   border: 1px solid currentColor;
   line-height: 54px;
-  background: #FFF7FA;
+  background: #fff7fa;
 }
 
-.login-wrapper .mat-form-field-appearance-legacy .mat-form-field-infix {
-  padding: 0.8375em 0;
-}
-
-
-.sign{
+.sign {
   padding-top: 30px;
- text-align:center;
+  text-align: center;
+}
+.sign a {
+  color: #3196e2;
 }
