--- a/src/app/user-register/user-register.component.html
+++ b/src/app/user-register/user-register.component.html
@@ -1,36 +1,40 @@
-<div class="login-wrapper" fxLayout="row" fxLayoutAlign="center center">
+<div class="register-wrapper" fxLayout="row" fxLayoutAlign="center center">
   <mat-card class="box">
     <mat-card-header>
       <mat-card-title>Register</mat-card-title>
     </mat-card-header>
 
-    <form class="example-form">
-
+    <form class="registerform" (submit)= "onRegister(registerForm)" #registerForm="ngForm">
       <mat-card-content>
-        <mat-form-field class="example-full-width">
-          <input matInput placeholder="Username">
+        <mat-form-field class="input-field">
+          <input matInput placeholder="Username" ngModel required minlength="3" #username="ngModel" placeholder="Username"/>
+          <mat-error *ngIf= "username.invalid"> Please enter a valid username</mat-error>
         </mat-form-field>
 
-        <mat-form-field class="example-full-width">
-          <input matInput placeholder="Email">
+        <mat-form-field class="input-field">
+          <input type="email" matInput placeholder="Email" ngModel required minlength="3" #email="ngModel" />
+          <mat-error *ngIf= "email.invalid"> Please enter a valid email</mat-error>
         </mat-form-field>
 
-        <mat-form-field class="example-full-width">
-          <input matInput placeholder="Password">
+        <mat-form-field class="input-field">
+          <input matInput placeholder="Password" ngModel required minlength="6" #password="ngModel" />
+          <mat-error *ngIf= "password.invalid"> Please enter a valid password</mat-error>
         </mat-form-field>
 
-        <mat-form-field class="example-full-width">
+        <mat-form-field class="input-field">
           <mat-label>Choose a role...</mat-label>
-          <mat-select>
-            <mat-option [value]="roles" *ngFor="let roles of Roles">{{roles}}
+          <mat-select  ngModel required ngModel #role="ngModel" >
+            <mat-option [value]="roles" *ngFor="let roles of Roles"
+              >{{ roles }}
             </mat-option>
           </mat-select>
+          <mat-error *ngIf= "role.invalid"> Please choose a role</mat-error>
         </mat-form-field>
-
       </mat-card-content>
 
-      <button mat-stroked-button color="accent" class="btn-block">Register</button>
-
+      <button mat-raised-button color="primary" class="btn-block">
+        Register
+      </button>
     </form>
   </mat-card>
 </div>
