--- a/src/app/user-register/user-register.component.css
+++ b/src/app/user-register/user-register.component.css
@@ -1,12 +1,9 @@
 
-.register-wrapper {
-  height: 100%;
-}
 
 .box {
   position: relative;
   float: left;
-  padding: 60px 50px;
+  padding: 30px 30px;
   width: 100%;
   background: #ffc05f;
   border-radius: 10px;
@@ -59,10 +56,11 @@
 
 .register-wrapper mat-card-header {
   text-align: center;
-  width: 100%;
   display: block;
   font-weight: 700;
   color: #fff7fa;
+  padding: 20px 0px;
+  margin-bottom: 20px;
 }
 
 .register-wrapper mat-card-header mat-card-title {
@@ -81,9 +79,14 @@
 }
 
 mat-form-field{
-  margin: 10px 0px;
+  margin: 5px 0px;
 }
 
 .btn-block{
   margin-top: 10px;
+}
+
+
+mat-card-header{
+background-color:   #FF826C;
 }
