sidebar includes in header component
header file include mat-sidebar

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<mat-sidenav-container>
+<!--<mat-sidenav-container>
   <mat-sidenav #sidenav role="navigation">
     <app-sidebar (sidenavClose)="sidenav.close()"></app-sidebar>
   </mat-sidenav>
@@ -8,4 +8,5 @@
       <router-outlet></router-outlet>
     </main>
   </mat-sidenav-content>
-</mat-sidenav-container>
+</mat-sidenav-container>-->
+<app-header></app-header>
