--- a/src/app/testcentre-register/testcentre-register.component.html
+++ b/src/app/testcentre-register/testcentre-register.component.html
@@ -1,4 +1,5 @@
-<h2 >Register Test Centre</h2>
+<div class=" container" fxLayout="row" fxLayoutAlign="center center">
+
 <!--<textarea rows="6"[value]="newPost"></textarea>-->
 <mat-card>
   <form >
@@ -21,3 +22,4 @@
 
   <!-- <p>{{newPost}}</p>-->
 </mat-card>
+</div>
