--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,6 +1,12 @@
 mat-icon {
   color: #ffffff;
   font-size: 24px;
+  margin-right: 10px;
+}
+main {
+  background-image: linear-gradient(180deg, #3196e2, #53d2dc);
+  height: 100%;
+  margin: 0px;
 }
 
 .title {
@@ -16,12 +22,23 @@ a {
   margin: 0px 10px;
 }
 
-.btn-nav:hover, .btn-nav:active {
+.btn-nav:hover,
+.btn-nav:active {
   background-color: #ffc05f;
 }
 
 mat-toolbar {
   background: #3196e2;
+}
+mat-sidenav-content {
+  background-image: linear-gradient(180deg, #3196e2, #53d2dc);
+  height: 100%;
+  margin:auto;
+
+
+}
+mat-sidenav {
+  background-color: #ffc05f;
 }
 
 @media (max-width: 959px) {
