--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -31,9 +31,13 @@ mat-toolbar {
   background: #3196e2;
 }
 mat-sidenav-content {
-  background-image: linear-gradient(180deg, #3196e2, #53d2dc);
+ background-image: linear-gradient(180deg, #3196e2, #53d2dc);
   height: 100%;
   margin:auto;
+   /* height: 100%;
+ background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.6)), url("/assets/b.jpg") no-repeat center;
+  background-size: cover;
+  min-height: 300px;*/
 
 
 }
