--- a/src/app/testcentre-register/testcentre-register.component.html
+++ b/src/app/testcentre-register/testcentre-register.component.html
@@ -1,25 +1,32 @@
-<div class=" container" fxLayout="row" fxLayoutAlign="center center">
 
-<!--<textarea rows="6"[value]="newPost"></textarea>-->
-<mat-card>
-  <form >
-  <mat-form-field>
-    <!--- <textarea matInput rows="6"[(ngModel)]="enteredValue"></textarea>-->
-   <!--- <input matInput type="text" [(ngModel)]="enteredTitle" />-->
-   <input matInput type ="text" name="title" ngModel required minlength="3" #title="ngModel" placeholder="Enter Test Center Name">
-   <mat-error *ngIf= "title.invalid"> Please enter a valid value</mat-error>
-  </mat-form-field>
-  <mat-form-field>
-   <!-- <textarea matInput rows="6" [(ngModel)]="enteredContent"></textarea>-->
-   <textarea matInput rows="4" name="content" ngModel required #content="ngModel" placeholder="Enter Address"></textarea>
-   <mat-error *ngIf= "content.invalid"> Please enter a valid value</mat-error>
-  </mat-form-field>
- <!-- <button mat-raised-button color="accent" (click)="onAddPost()">-->
-  <button mat-raised-button color="accent" type="submit">
-    Submit
-  </button>
+<form class="normal-form">
+  <mat-grid-list cols="2" rowHeight="300px">
+    <mat-grid-tile>
+      <div class="control-cont">
+        <mat-form-field>
+          <mat-label>Fullname</mat-label>
+          <input matInput disabled value="Kam Yik Hua">
+        </mat-form-field>
+        <mat-form-field>
+          <mat-label>Username</mat-label>
+          <input matInput disabled value="TestManager-KL">
+          <!--<input formControlName="username" matInput placeholder="Username"/>-->
+        </mat-form-field>
+        <mat-form-field>
+          <mat-label>Email</mat-label>
+          <input matInput disabled value="yikhua@gmail.com">
+         <!-- <input formControlName="email" matInput placeholder="Email"/>-->
+        </mat-form-field>
+      </div>
+    </mat-grid-tile>
+    <mat-grid-tile>
+      <h1></h1>
+      <mat-form-field>
+        <mat-label>Register Test Center</mat-label>
+        <input  matInput placeholder="Centre Name"/>
+      </mat-form-field>
+    </mat-grid-tile>
+
+  </mat-grid-list>
 </form>
 
-  <!-- <p>{{newPost}}</p>-->
-</mat-card>
-</div>
