--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -33,7 +33,7 @@
       <a mat-list-item routerLink="/rCentre" (click)="sidenav.toggle()">
           <mat-icon>assignment_ind</mat-icon> <span class="nav-caption">Register Test Centre</span>
       </a>
-      <a mat-list-item routerLink="/rCentre" (click)="sidenav.toggle()">
+      <a mat-list-item routerLink="/recordOfficer" (click)="sidenav.toggle()">
           <mat-icon>group_add</mat-icon><span class="nav-caption">Record Test Centre Officer</span>
       </a>
       <a mat-list-item routerLink="/manageTestKit" (click)="sidenav.toggle()">
