done test register

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -30,7 +30,7 @@
       <a mat-list-item routerLink="/home" (click)="sidenav.toggle()">
           <mat-icon>home</mat-icon> <span class="nav-caption">Home</span>
       </a>
-      <a mat-list-item routerLink="/rCentre" (click)="sidenav.toggle()">
+      <a mat-list-item routerLink="/testcentre" (click)="sidenav.toggle()">
           <mat-icon>assignment_ind</mat-icon> <span class="nav-caption">Register Test Centre</span>
       </a>
       <a mat-list-item routerLink="/recordOfficer" (click)="sidenav.toggle()">
