--- a/src/app/record-officer/record-officer.component.html
+++ b/src/app/record-officer/record-officer.component.html
@@ -1,1 +1,75 @@
-<p>record-officer works!</p>
+<div class=" register-wrapper" fxLayout="row" fxLayoutAlign="center center">
+
+  <mat-card class="box">
+    <mat-card-header>
+      <mat-card-title>Record Test Centre Officer</mat-card-title>
+    </mat-card-header>
+
+    <form class="registerform" >
+      <mat-card-content>
+        <mat-form-field class="input-field">
+          <input matInput name="fullname" ngModel required minlength="5" #fullname="ngModel" placeholder="Full Name">
+          <mat-error *ngIf= "fullname.invalid"> Please enter a valid fullname</mat-error>
+        </mat-form-field>
+
+        <mat-form-field class="input-field">
+          <input matInput name="username" ngModel required minlength="5" #username="ngModel" placeholder="Username">
+          <mat-error *ngIf= "username.invalid"> Please enter a username</mat-error>
+        </mat-form-field>
+
+        <mat-form-field class="input-field">
+          <input matInput name="password" placeholder="Password" ngModel required minlength="6" #password="ngModel">
+          <mat-error *ngIf= "password.invalid"> Please enter a password</mat-error>
+        </mat-form-field>
+        <mat-form-field class="input-field">
+          <mat-label>Position</mat-label>
+          <input matInput disabled value="Tester">
+
+        </mat-form-field>
+
+      </mat-card-content>
+      <button mat-raised-button color="primary" class="btn-block">Register</button>
+    </form>
+  </mat-card>
+</div>
+
+
+
+
+
+<mat-grid-list cols="2" rowHeight="300px">
+  <mat-grid-tile>
+
+    <div class="control-cont">
+      <mat-form-field class="input-field">
+        <input matInput name="fullname" ngModel required minlength="5" #fullname="ngModel" placeholder="Full Name">
+        <mat-error *ngIf= "fullname.invalid"> Please enter a valid fullname</mat-error>
+      </mat-form-field>
+
+      <mat-form-field class="input-field">
+        <input matInput name="username" ngModel required minlength="5" #username="ngModel" placeholder="Username">
+        <mat-error *ngIf= "username.invalid"> Please enter a username</mat-error>
+      </mat-form-field>
+
+      <mat-form-field class="input-field">
+        <input matInput name="password" placeholder="Password" ngModel required minlength="6" #password="ngModel">
+        <mat-error *ngIf= "password.invalid"> Please enter a password</mat-error>
+      </mat-form-field>
+      <mat-form-field class="input-field">
+        <mat-label>Position</mat-label>
+        <input matInput disabled value="Tester">
+
+      </mat-form-field>
+    </div>
+  </mat-grid-tile>
+  <mat-grid-tile>
+    <app-record-officer-list></app-record-officer-list>
+
+  </mat-grid-tile>
+
+</mat-grid-list>
+
+
+
+
+
