--- a/src/app/testcentre-register/testcentre-register.component.html
+++ b/src/app/testcentre-register/testcentre-register.component.html
@@ -1,46 +1,18 @@
-<h1>Test Manager Profile</h1>
-<form class="normal-form">
-  <mat-grid-list cols="2" rowHeight="300px">
-    <mat-grid-tile>
-      <div class="control-cont">
-        <mat-form-field>
-          <mat-label>Fullname</mat-label>
-          <input matInput disabled value="Kam Yik Hua">
-        </mat-form-field>
-        <mat-form-field>
-          <mat-label>Username</mat-label>
-          <input matInput disabled value="TestManager-KL">
-          <!--<input formControlName="username" matInput placeholder="Username"/>-->
-        </mat-form-field>
-        <mat-form-field>
-          <mat-label>Email</mat-label>
-          <input matInput disabled value="yikhua@gmail.com">
-         <!-- <input formControlName="email" matInput placeholder="Email"/>-->
-        </mat-form-field>
-        <mat-form-field>
-          <mat-label>Test Centre</mat-label>
-          <input matInput disabled value="">
-         <!-- <input formControlName="email" matInput placeholder="Email"/>-->
-        </mat-form-field>
-      </div>
-    </mat-grid-tile>
-    <mat-grid-tile>
 
-  <mat-card class="box">
-    <mat-card-header>
-      <mat-card-title>Register Test Centre</mat-card-title>
-    </mat-card-header>
-    <form class="form" >
-      <mat-card-content>
-        <mat-form-field class="input-field">
-          <input matInput name="centrename" ngModel required minlength="3" #centrename="ngModel" placeholder="Centre Name">
-          <mat-error *ngIf= "centrename.invalid"> Please enter test center name</mat-error>
-        </mat-form-field>
-      </mat-card-content>
-      <button mat-raised-button color="primary" class="btn-block">Register</button>
-    </form>
-  </mat-card>
-    </mat-grid-tile>
-  </mat-grid-list>
-</form>
+    <mat-card class="box">
+      <mat-card-header>
+        <mat-card-title>Register Test Centre</mat-card-title>
+      </mat-card-header>
+
+      <form class="form" >
+        <mat-card-content>
+          <mat-form-field class="input-field">
+            <input matInput name="centrename" [(ngModel)]="enteredCentre" required #centrename="ngModel" placeholder="Centre Name">
+            <mat-error *ngIf= "centrename.invalid"> Please enter test center name</mat-error>
+          </mat-form-field>
+        </mat-card-content>
+        <button mat-raised-button color="primary" (click)="onAddCentre()" class="btn-block">Register</button>
+      </form>
+    </mat-card>
+
 
