--- a/src/app/testcentre-register/testcentre-register.component.html
+++ b/src/app/testcentre-register/testcentre-register.component.html
@@ -7,8 +7,8 @@
       <form class="form" >
         <mat-card-content>
           <mat-form-field class="input-field">
-            <input matInput name="centrename" [(ngModel)]="enteredCentre" required #centrename="ngModel" placeholder="Centre Name">
-            <mat-error *ngIf= "centrename.invalid"> Please enter test center name</mat-error>
+            <input matInput name="centrename" [(ngModel)]="enteredCentre" required minlength="3" #centrename="ngModel" placeholder="Enter Test Centre Name">
+            <mat-error *ngIf= "centrename.invalid"> Please enter test center name with at least 3 characters</mat-error>
           </mat-form-field>
         </mat-card-content>
         <button mat-raised-button color="primary" (click)="onAddCentre()" class="btn-block">Register</button>
