responsive form commit

--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,7 +1,7 @@
 mat-icon {
   color: #ffffff;
   font-size: 24px;
-  margin-right: 10px;
+  margin: 5px 5px;
 }
 main {
   background-image: linear-gradient(180deg, #3196e2, #53d2dc);
