--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -21,7 +21,7 @@
     </form>
 
     <mat-card-footer class="sign">
-    <p>Don't have any account? <a routerLink="/user">Sign Up Now</a></p>
+    <p>Don't have any account? <a routerLink="/register">Sign Up Now</a></p>
   </mat-card-footer>
   </mat-card>
 
