--- a/src/app/record-officer/record-officer.component.html
+++ b/src/app/record-officer/record-officer.component.html
@@ -1,4 +1,8 @@
-<div class=" register-wrapper" fxLayout="row" fxLayoutAlign="center center">
+<div class=" register-wrapper" fxFlex="50"
+fxFlex.md="100"
+fxFlex.sm="100"
+fxFlex.xs="100"
+fxLayout="column"  fxLayoutGap="10px" fxLayoutAlign="center center">
 
   <mat-card class="box">
     <mat-card-header>
@@ -37,7 +41,11 @@
 
 
 
-<mat-grid-list cols="2" rowHeight="300px">
+<mat-grid-list    fxFlex="25"
+fxFlex.md="33"
+fxFlex.sm="50"
+fxFlex.xs="100"
+fxLayout="column" cols="2" rowHeight="300px">
   <mat-grid-tile>
 
     <div class="control-cont">
