--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,13 +6,22 @@
     <a color="basic" routerLink="/home" class="title">
       <mat-icon> coronavirus</mat-icon> CTS</a>
     <span class="menu-spacer"></span>
-    <div fxShow="true" ><!--fxHide.lt-md-->
+    <div fxShow="true" fxHide.lt-md ><!--fxHide.lt-md-->
       <!--  be hidden on both SM and XS screen sizes-->
       <a mat-raised-button class="btn-nav" color="primary" routerLink="/login">
         <mat-icon> enhanced_encryption </mat-icon>Login
       </a>
       <a mat-raised-button class="btn-nav" color="primary" routerLink="/register">
         <mat-icon> perm_identity </mat-icon>Sign Up
+      </a>
+    </div>
+    <div fxShow="true" fxHide.gt-sm ><!--fxHide.lt-md-->
+      <!--  be hidden on both SM and XS screen sizes-->
+      <a mat-raised-button class="btn-nav" color="primary" routerLink="/login">
+        <mat-icon> enhanced_encryption </mat-icon>
+      </a>
+      <a mat-raised-button class="btn-nav" color="primary" routerLink="/register">
+        <mat-icon> perm_identity </mat-icon>
       </a>
     </div>
   </mat-toolbar-row>
