--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -13,7 +13,7 @@
         </mat-form-field>
 
         <mat-form-field class="input-field">
-          <input matInput name="password" placeholder="Password" ngModel required minlength="6" #password="ngModel">
+          <input matInput name="password" type="password" placeholder="Password" ngModel required minlength="6" #password="ngModel">
           <mat-error *ngIf= "password.invalid"> Please enter a password</mat-error>
         </mat-form-field>
       </mat-card-content>
