--- a/src/app/record-officer-list/record-officer-list.component.html
+++ b/src/app/record-officer-list/record-officer-list.component.html
@@ -1,18 +1,42 @@
-<mat-accordion multi="true">  <!--multi=false only can expand one accordion-->
-  <mat-expansion-panel >
-    <mat-expansion-panel-header>
-    <!--  {{post.title}}-->
+<table mat-table [dataSource]="dataSource"  *ngFor="let officer of officers" class="mat-elevation-z8">
 
-    </mat-expansion-panel-header>
-    <p><!--{{post.content}}--></p>
-    <mat-action-row>
-      <span class="example-spacer"></span>
-      <button mat-button color="primary" routerLink="/create">EDIT</button>
-      <button mat-button color="warn"  routerLink="/list">DELETE</button>
-    </mat-action-row>
+  <!--- Note that these columns can be defined in any order.
+        The actual rendered columns are set as a property on the row definition" -->
 
-  </mat-expansion-panel>
+  <!-- Position Column -->
+  <ng-container matColumnDef="position">
+    <th mat-header-cell *matHeaderCellDef> Position </th>
+    <td mat-cell *matCellDef="let officer"> {{officer.position}} </td>
+  </ng-container>
 
-</mat-accordion>
+  <!-- Name Column -->
+  <ng-container matColumnDef="username">
+    <th mat-header-cell *matHeaderCellDef> Username </th>
+    <td mat-cell *matCellDef="let officer"> {{officer.username}} </td>
+  </ng-container>
 
-<p class="info-text mat-body-1" >No post added yet</p>
+  <!-- Weight Column -->
+  <ng-container matColumnDef="password">
+    <th mat-header-cell *matHeaderCellDef> Password </th>
+    <td mat-cell *matCellDef="let  officer"> {{officer.password}} </td>
+  </ng-container>
+
+  <!-- Symbol Column -->
+  <ng-container matColumnDef="fullname">
+    <th mat-header-cell *matHeaderCellDef> Fullname </th>
+    <td mat-cell *matCellDef="let  officer"> {{officer.fullname}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="action">
+    <th mat-header-cell *matHeaderCellDef> Actions</th>
+    <td mat-cell *matCellDef="let row">
+      <button mat-icon-button> <mat-icon>edit</mat-icon></button>
+      <button mat-icon-button> <mat-icon>delete</mat-icon></button>
+    </td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+</table>
+
+
