--- a/src/app/record-officer/record-officer.component.html
+++ b/src/app/record-officer/record-officer.component.html
@@ -1,16 +1,27 @@
-<div class=" register-wrapper" fxFlex="50"
-fxFlex.md="100"
-fxFlex.sm="100"
-fxFlex.xs="100"
-fxLayout="column"  fxLayoutGap="10px" fxLayoutAlign="center center">
+<div class=" register-wrapper"  fxLayout
+fxLayout.md="column"
+fxLayoutAlign="center center"
+fxLayoutGap="30px"
+fxLayoutGap.xs="0">
 
   <mat-card class="box">
     <mat-card-header>
       <mat-card-title>Record Test Centre Officer</mat-card-title>
     </mat-card-header>
 
-    <form class="registerform" >
+    <form class="registerform" (submit)= "onAddOfficer (officerForm)" #officerForm="ngForm" >
       <mat-card-content>
+        <div class="item item-1" fxFlex="50%" fxLayoutGap="30px">
+        <mat-form-field class="input-field">
+          <mat-label>Tester Centre Name</mat-label>
+          <input matInput disabled value="TestCentre">
+        </mat-form-field>
+        <mat-form-field class="input-field">
+          <mat-label>Position</mat-label>
+          <input matInput readonly value="Tester">
+        </mat-form-field>
+      </div>
+      <div class="item item-2" fxFlex="50%" >
         <mat-form-field class="input-field">
           <input matInput name="fullname" ngModel required minlength="5" #fullname="ngModel" placeholder="Full Name">
           <mat-error *ngIf= "fullname.invalid"> Please enter a valid fullname</mat-error>
@@ -22,62 +33,16 @@ fxLayout="column"  fxLayoutGap="10px" fxLayoutAlign="center center">
         </mat-form-field>
 
         <mat-form-field class="input-field">
-          <input matInput name="password" placeholder="Password" ngModel required minlength="6" #password="ngModel">
+          <input matInput name="password" type="password" placeholder="Password" ngModel required minlength="6" #password="ngModel">
           <mat-error *ngIf= "password.invalid"> Please enter a password</mat-error>
         </mat-form-field>
-        <mat-form-field class="input-field">
-          <mat-label>Position</mat-label>
-          <input matInput disabled value="Tester">
-
-        </mat-form-field>
+        </div>
 
       </mat-card-content>
-      <button mat-raised-button color="primary" class="btn-block">Register</button>
+      <button mat-raised-button color="primary" class="btn-block" type="submit">Register</button>
     </form>
   </mat-card>
 </div>
 
-
-
-
-
-<mat-grid-list    fxFlex="25"
-fxFlex.md="33"
-fxFlex.sm="50"
-fxFlex.xs="100"
-fxLayout="column" cols="2" rowHeight="300px">
-  <mat-grid-tile>
-
-    <div class="control-cont">
-      <mat-form-field class="input-field">
-        <input matInput name="fullname" ngModel required minlength="5" #fullname="ngModel" placeholder="Full Name">
-        <mat-error *ngIf= "fullname.invalid"> Please enter a valid fullname</mat-error>
-      </mat-form-field>
-
-      <mat-form-field class="input-field">
-        <input matInput name="username" ngModel required minlength="5" #username="ngModel" placeholder="Username">
-        <mat-error *ngIf= "username.invalid"> Please enter a username</mat-error>
-      </mat-form-field>
-
-      <mat-form-field class="input-field">
-        <input matInput name="password" placeholder="Password" ngModel required minlength="6" #password="ngModel">
-        <mat-error *ngIf= "password.invalid"> Please enter a password</mat-error>
-      </mat-form-field>
-      <mat-form-field class="input-field">
-        <mat-label>Position</mat-label>
-        <input matInput disabled value="Tester">
-
-      </mat-form-field>
-    </div>
-  </mat-grid-tile>
-  <mat-grid-tile>
-    <app-record-officer-list></app-record-officer-list>
-
-  </mat-grid-tile>
-
-</mat-grid-list>
-
-
-
-
+<app-record-officer-list></app-record-officer-list>
 
