--- a/src/app/user-register/user-register.component.css
+++ b/src/app/user-register/user-register.component.css
@@ -45,12 +45,12 @@
 */
 .register-wrapper .registerform {
   min-width: 100%;
-  max-width: 300px;
+ max-width: 400px;
   width: 100%;
 }
 
 .register-wrapper .input-field,
-.register-wrapper .btn-block {
+.register-wrapper {
   width: 100%;
 }
 
@@ -84,6 +84,8 @@ mat-form-field{
 
 .btn-block{
   margin-top: 10px;
+
+  width: 100%;
 }
 
 
