--- a/src/styles.css
+++ b/src/styles.css
@@ -16,3 +16,15 @@ a {
   text-decoration: none;
 }
 
+table {
+  width: 80%;
+margin: auto;
+}
+mat-form-field{
+    width:100%;
+  }
+
+
+.item{
+  padding: 0 10px;
+}
