--- a/src/app/manage-testkit-list/manage-testkit-list.component.html
+++ b/src/app/manage-testkit-list/manage-testkit-list.component.html
@@ -1,10 +1,10 @@
-<mat-accordion multi="true">  <!--multi=false only can expand one accordion-->
-  <mat-expansion-panel >
+<mat-accordion multi="true"  *ngIf ="testkits.length > 0">  <!--multi=false only can expand one accordion-->
+  <mat-expansion-panel *ngFor="let testkit of testkits">
     <mat-expansion-panel-header>
-    <!--  {{post.title}}-->
+    {{testkit.testkitName}}
 
     </mat-expansion-panel-header>
-    <p><!--{{post.content}}--></p>
+    <p>{{testkit.stock}}</p>
     <mat-action-row>
       <span class="example-spacer"></span>
       <button mat-button color="primary" routerLink="/create">EDIT</button>
@@ -15,4 +15,4 @@
 
 </mat-accordion>
 
-<p class="info-text mat-body-1" >No post added yet</p>
+<p class="info-text mat-body-1" *ngIf ="testkits.length <= 0" >No testkit added yet</p>
