--- a/src/app/record-officer/record-officer.component.html
+++ b/src/app/record-officer/record-officer.component.html
@@ -18,7 +18,7 @@ fxLayoutGap.xs="0">
         </mat-form-field>
         <mat-form-field class="input-field">
           <mat-label>Position</mat-label>
-          <input matInput readonly value="Tester">
+          <input matInput readonly name="position" value="Tester">
         </mat-form-field>
       </div>
       <div class="item item-2" fxFlex="50%" >
