added-patient-list

--- a/src/app/view-test/view-test.component.html
+++ b/src/app/view-test/view-test.component.html
@@ -1,6 +1,7 @@
 <div>
+
   <h1>Covid-19 Test Result</h1>
-  <mat-card style="overflow:auto;">
+  <mat-card>
     <h2>Covid-19 Test Report Card</h2>
     <mat-card-content>
       <h3>Reporter Information</h3>
@@ -61,7 +62,7 @@
         </div>
 
         <div fxFlex="50">
-          <h4>Identity Card/Passport Number</h4>
+          <h4>Identity Card Number/Passport Number</h4>
           <mat-form-field appearance="fill">
             <mat-label>data</mat-label>
             <input matInput disabled>
