--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -24,6 +24,7 @@
         <mat-icon> perm_identity </mat-icon>
       </a>
     </div>
+
   </mat-toolbar-row>
 </mat-toolbar>
 
@@ -48,6 +49,9 @@
       <a mat-list-item routerLink="/manageTestKit" (click)="sidenav.toggle()">
         <mat-icon>science</mat-icon><span class="nav-caption">Manage Test Kit Stock</span>
     </a>
+    <a mat-list-item routerLink="/generateReport" (click)="sidenav.toggle()">
+      <mat-icon>receipt_long</mat-icon><span class="nav-caption">Generate Test Report</span>
+  </a>
     </mat-nav-list>
   </div>
   </mat-sidenav>
