--- a/src/app/view-test/view-test.component.html
+++ b/src/app/view-test/view-test.component.html
@@ -1,7 +1,7 @@
-<div>
+<div class="container">
 
   <h1>Covid-19 Test Result</h1>
-  <mat-card>
+  <mat-card style="padding:30px 80px">
     <h2>Covid-19 Test Report Card</h2>
     <mat-card-content>
       <h3>Reporter Information</h3>
@@ -14,7 +14,7 @@
           </mat-form-field>
           <h4>Tester Name</h4>
           <mat-form-field appearance="fill">
-            <mat-label>Dylan Chng</mat-label>
+            <mat-label>Dr. Dylan Chng</mat-label>
             <input matInput disabled>
           </mat-form-field>
         </div>
@@ -34,52 +34,47 @@
 
       </div>
 
-
-
       <mat-divider></mat-divider>
       <h3>Patient Information</h3>
       <div fxlayout="row">
         <div fxFlex="50" style="margin-right:10px;">
           <h4>Full Name</h4>
           <mat-form-field appearance="fill">
-            <mat-label>data</mat-label>
+            <mat-label>Liew Cai Juan</mat-label>
             <input matInput disabled>
           </mat-form-field>
 
           <h4>Sex</h4>
           <mat-form-field appearance="fill">
-            <mat-label>data</mat-label>
+            <mat-label>Female</mat-label>
             <input matInput disabled>
           </mat-form-field>
 
           <h4>Date of Birth </h4>
           <mat-form-field appearance="fill">
-            <mat-label>data</mat-label>
+            <mat-label>6/6/1999</mat-label>
             <input matInput disabled>
           </mat-form-field>
-
-
         </div>
-
+        
         <div fxFlex="50">
           <h4>Identity Card Number/Passport Number</h4>
           <mat-form-field appearance="fill">
-            <mat-label>data</mat-label>
+            <mat-label>990606666666</mat-label>
             <input matInput disabled>
           </mat-form-field>
 
           <h4>Age</h4>
           <mat-form-field appearance="fill">
-            <mat-label>data</mat-label>
+            <mat-label>6</mat-label>
             <input matInput disabled>
           </mat-form-field>
 
           <h4>Phone Number</h4>
           <mat-form-field appearance="fill">
-            <mat-label>data</mat-label>
+            <mat-label>0166666666</mat-label>
             <input matInput disabled>
           </mat-form-field>
-
 
         </div>
 
@@ -87,7 +82,7 @@
 
       <h4>Address</h4>
       <mat-form-field appearance="fill">
-        <mat-label>data</mat-label>
+        <mat-label>01 Jalan Kepong</mat-label>
         <input matInput disabled>
       </mat-form-field>
 
@@ -97,13 +92,13 @@
 
           <h4>Zip Code</h4>
           <mat-form-field appearance="fill">
-            <mat-label>data</mat-label>
+            <mat-label>47410</mat-label>
             <input matInput disabled>
           </mat-form-field>
 
           <h4>Country</h4>
           <mat-form-field appearance="fill">
-            <mat-label>data</mat-label>
+            <mat-label>Malaysia</mat-label>
             <input matInput disabled>
           </mat-form-field>
         </div>
@@ -113,13 +108,13 @@
 
           <h4>City</h4>
           <mat-form-field appearance="fill">
-            <mat-label>data</mat-label>
+            <mat-label>Petaling Jaya</mat-label>
             <input matInput disabled>
           </mat-form-field>
 
           <h4>State</h4>
           <mat-form-field appearance="fill">
-            <mat-label>data</mat-label>
+            <mat-label>Selangor</mat-label>
             <input matInput disabled>
           </mat-form-field>
 
@@ -134,24 +129,24 @@
         <div fxFlex="50" style="margin-right:10px;">
           <h4>Admit Date</h4>
           <mat-form-field appearance="fill">
-            <mat-label>data</mat-label>
+            <mat-label>2/10/2020</mat-label>
             <input matInput disabled>
           </mat-form-field>
           <h4>Hospital</h4>
           <mat-form-field appearance="fill">
-            <mat-label>data</mat-label>
+            <mat-label>-</mat-label>
             <input matInput disabled>
           </mat-form-field>
         </div>
         <div fxFlex="50" style="margin-right:10px;">
           <h4>Date of symptom onset</h4>
           <mat-form-field appearance="fill">
-            <mat-label>data</mat-label>
+            <mat-label>1/10/2020</mat-label>
             <input matInput disabled>
           </mat-form-field>
           <h4>Hospitalized? </h4>
           <mat-form-field appearance="fill">
-            <mat-label>data</mat-label>
+            <mat-label>No</mat-label>
             <input matInput disabled>
           </mat-form-field>
         </div>
@@ -161,7 +156,7 @@
       <div>
         <h4>Covid-19 Test Result</h4>
         <mat-form-field appearance="fill">
-          <mat-label>Positive</mat-label>
+          <mat-label>Negative</mat-label>
           <input matInput disabled>
         </mat-form-field>
         <h4>Test Type</h4>
