--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -48,14 +48,20 @@
       </a>
       <a mat-list-item routerLink="/manageTestKit" (click)="sidenav.toggle()">
         <mat-icon>science</mat-icon><span class="nav-caption">Manage Test Kit Stock</span>
-    </a>
-    <a mat-list-item routerLink="/generateReport" (click)="sidenav.toggle()">
-      <mat-icon>receipt_long</mat-icon><span class="nav-caption">Generate Test Report</span>
-  </a>
+      </a>
+      <a mat-list-item routerLink="/generateReport" (click)="sidenav.toggle()">
+        <mat-icon>receipt_long</mat-icon><span class="nav-caption">Generate Test Report</span>
+      </a>
+      <a mat-list-item routerLink="/recordTest" (click)="sidenav.toggle()">
+        <mat-icon>drafts</mat-icon><span class="nav-caption">Record New Test</span>
+      </a>
+      <a mat-list-item routerLink="/viewTest" (click)="sidenav.toggle()">
+        <mat-icon>description</mat-icon><span class="nav-caption">View Test Result</span>
+      </a>
     </mat-nav-list>
   </div>
   </mat-sidenav>
-  <mat-sidenav-content fxFlexFill>
+  <mat-sidenav-content style="">
     <router-outlet></router-outlet>
   </mat-sidenav-content>
 </mat-sidenav-container>
