--- a/src/app/patient-list/patient-list.component.html
+++ b/src/app/patient-list/patient-list.component.html
@@ -1,9 +1,9 @@
-<table mat-table [dataSource]="patients" *ngFor="let patient of patients" class="mat-elevation-z8">
+<table mat-table [dataSource]="patients"  class="mat-elevation-z8">
 
   <!--- Note that these columns can be defined in any order.
         The actual rendered columns are set as a property on the row definition" -->
   <!-- Username Column -->
-  <ng-container matColumnDef="username">
+  <ng-container matColumnDef="username" >
     <th mat-header-cell *matHeaderCellDef> Username </th>
     <td mat-cell *matCellDef="let patient"> {{patient.username}} </td>
   </ng-container>
