--- a/src/app/view-test/view-test.component.css
+++ b/src/app/view-test/view-test.component.css
@@ -3,7 +3,9 @@ h4 {
 }
 
 .mat-card{
-  margin:30px;
+  margin: auto;
+  margin-bottom: 50px;
+  max-width: 800px;
 }
 
 h2 {
@@ -12,4 +14,5 @@ h2 {
 
 .container {
   position: relative;
+  margin:0 auto;
 }
